[FEAT] add related products endpoint
