# app/Models/Category.php
@@ -40,9 +40,15 @@ class Category extends Model implements HasMedia
     {
         return $this->belongsToMany(Attribute::class);
     }
+    
     public function children(): HasMany
     {
         return $this->hasMany(Category::class , 'parent_id');
+    }
+
+    public function products(): HasMany
+    {
+        return $this->hasMany(Product::class);
     }
 
 }
